:construction: Add command md generator